# Nice-2-Meet-U-Match

./: .env.example  .env.gke.example  .env.production.example  .gitignore  COMPOSITE_MICROSERVICE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.decision  Dockerfile.match  Dockerfile.pool  MICROSERVICES.md  Makefile  decision_main.py  deploy-cloudbuild.sh  deploy-microservices.sh  deploy.sh  instructions.md  main.py  match_main.py  pool_main.py  pyproject.toml  readme.md  requirements.txt  setup_google_cloud.sh  test_event_config.py  user_main.py
cloud_functions/: main.py  match_cleanup_handler.py  requirements.txt
decision/: __init__.py  decision_exceptions.py  decision_resources.py  decision_schemas.py  decision_services.py
documentation/: API_ENDPOINTS.md  ARCHITECTURE.md
frameworks/: hateoas.py
frontend/: app.js
match/: __init__.py  match_exceptions.py  match_resources.py  match_schemas.py  match_services.py
models/: __init__.py  availability.py  composite.py  db.py  decisions.py  health.py  match.py  pool.py  user_match.py
notes/: COMPOSITE_MICROSERVICE.md  DEPLOYMENT_COMPLETE.md  EVENTS_ARCHITECTURE.md  RESOURCES_DOCUMENTATION.md  TESTING_GUIDE.md
pool/: __init__.py  pool_exceptions.py  pool_resources.py  pool_schemas.py  pool_services.py
resources/: decisions.py  matches.py  pools.py  user_match.py  users.py
scripts/: add_coordinates_migration.sql  db_ping.py  fix_match_id_schema.sql
services/: Dockerfile  availability.py  db.py  decision_service.py  event_publisher.py  match.py  match_cleanup_service.py  match_service.py  pool_service.py  (+1 more)
(+17 files in other folders)
